[package]
name = "todue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["cargo"] }
crossterm = "0.27.0"
termcolor = "1.4.1"
